# sp1

./: Cargo.toml
crates/ rwasm/executor/: Cargo.toml
crates/ rwasm/machine/: Cargo.toml
crates/core/executor/: Cargo.toml
crates/core/executor/src/: executor.rs  hook.rs
crates/core/machine/: Cargo.toml
crates/core/machine/src/control_flow/: mod.rs
crates/core/machine/src/riscv/: mod.rs
crates/derive/src/: lib.rs
crates/prover/: Cargo.toml
crates/prover/scripts/: build_compress_vks.rs
crates/recursion/circuit/: Cargo.toml
crates/recursion/circuit/scripts/: circuit_architecture_sweep.rs
crates/recursion/circuit/src/: merkle_tree.rs  stark.rs  types.rs  utils.rs
crates/recursion/circuit/src/machine/: core.rs  vkey_proof.rs
crates/recursion/compiler/: Cargo.toml
crates/recursion/compiler/src/circuit/: compiler.rs  mod.rs
crates/recursion/core/: Cargo.toml  build.rs
crates/recursion/core/include/: add_sub.hpp  bitwise.hpp  lt.hpp  sll.hpp  syscall.hpp  utils.hpp
crates/recursion/core/src/: machine.rs
crates/recursion/core/src/air/: public_values.rs
crates/recursion/core/src/chips/: alu_base.rs  alu_ext.rs  batch_fri.rs  exp_reverse_bits.rs  fri_fold.rs  public_values.rs  select.rs
crates/rwasm/: instructions.md
crates/rwasm/examples/fib/: fibonacci.wat
crates/rwasm/examples/hello/: hello.wasm  hello.wat  simple.wat
crates/rwasm/executor/: CHANGELOG.md  Cargo.toml
crates/rwasm/executor/src/: air.rs  context.rs  cost.rs  dependencies.rs  estimator.rs  executor.rs  hook.rs  instruction.rs  lib.rs  memory.rs  opcode.rs  profiler.rs  program.rs  programs.rs  record.rs  report.rs  state.rs  utils.rs
crates/rwasm/executor/src/disassembler/: binary.rs  elf.rs  mod.rs
crates/rwasm/executor/src/events/: byte.rs  cpu.rs  (+4 more)
crates/rwasm/machine/: CHANGELOG.md  Cargo.toml  build.rs
crates/rwasm/machine/cpp/: extern.cpp
crates/rwasm/machine/include/: cpu.hpp  memory.hpp  memory_global.hpp  memory_local.hpp  mul.hpp  prelude.hpp  sr.hpp  sys.hpp
crates/rwasm/machine/src/: io.rs  lib.rs  sys.rs
crates/rwasm/machinetest/: Cargo.toml
crates/rwasm/machinetest/src/: lib.rs
crates/rwasm/prover/: Cargo.toml
crates/rwasm/prover/scripts/: build_compress_vks.rs  build_groth16_bn254.rs  build_plonk_bn254.rs  build_recursion_vks.rs  e2e.rs  fibonacci_groth16.rs  fibonacci_sweep.rs  find_maximal_shapes.rs  find_oom_shapes.rs  find_recursion_shapes.rs  find_small_shapes.rs  post_trusted_setup.rs  tendermint_sweep.rs  test_shape_fixing.rs
crates/rwasm/prover/src/: build.rs  components.rs  fibtest.rs  lib.rs  rwasmtest.rs  shapes.rs  types.rs  utils.rs  verify.rs
crates/rwasm/prover/src/gas/: mod.rs
crates/sdk/: Cargo.toml
crates/stark/src/: machine.rs  prover.rs
crates/stark/src/air/: builder.rs
crates/stark/src/lookup/: debug.rs  interaction.rs
crates/verifier/: Cargo.toml
(+145 files in other folders)
