[package]
name = "rwasm-prover"
description = "SP1 is a performant, 100% open-source, contributor-friendly zkVM."
readme = "../../README.md"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
exclude = ["src/vk_map.bin"]

[dependencies]
p3-matrix = { workspace = true }
sp1-recursion-compiler = { workspace = true }
sp1-recursion-core = { workspace = true }
sp1-recursion-circuit = { workspace = true }
sp1-recursion-gnark-ffi = { workspace = true }
rwasm-machine = { workspace = true }
sp1-stark = { workspace = true }
p3-symmetric = { workspace = true }
rwasm-executor = { workspace = true }
sp1-primitives = { workspace = true }
p3-field = { workspace = true }
p3-challenger = { workspace = true }
p3-baby-bear = { workspace = true }
p3-bn254-fr = { workspace = true }
p3-commit = { workspace = true }
p3-util = { workspace = true }
bincode = "1.3.3"
serde = { workspace = true, features = ["derive", "rc"] }
itertools = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2.3"
serde_json = { workspace = true }
clap = { version = "4.5.9", features = ["derive", "env"] }
anyhow = "1.0.83"
dirs = "5.0.1"
serial_test = "3.1.1"
num-bigint = "0.4.6"
thiserror = "1.0.63"
rayon = "1.10.0"
lru = "0.12.4"
eyre = "0.6.12"
hashbrown = { workspace = true, features = ["inline-more"] }
enum-map = { version = "2.7.3" }


#rwasm

rwasm = { git = "https://github.com/fluentlabs-xyz/rwasm.git", branch = "feat/tracing", features = [
  "std",
  "tracing",
] }

[build-dependencies]
downloader = { version = "0.2", default-features = false, features = [
  "rustls-tls",
  "verify",
] }
sha2 = { version = "0.10" }
hex = "0.4"


# [[bin]]
# name = "rwasm_build_plonk_bn254"
# path = "scripts/build_plonk_bn254.rs"

# [[bin]]
# name = "rwasm_build_groth16_bn254"
# path = "scripts/build_groth16_bn254.rs"

# [[bin]]
# name = "rwasm_build_recursion_vks"
# path = "scripts/build_recursion_vks.rs"

# [[bin]]
# name = "rwasm_find_maximal_shapes"
# path = "scripts/find_maximal_shapes.rs"

# [[bin]]
# name = "rwasm_find_small_shapes"
# path = "scripts/find_small_shapes.rs"

# [[bin]]
# name = "rwasm_find_oom_shapes"
# path = "scripts/find_oom_shapes.rs"

# [[bin]]
# name = "rwasm_find_recursion_shapes"
# path = "scripts/find_recursion_shapes.rs"

# [[bin]]
# name = "rwasm_test_shape_fixing"
# path = "scripts/test_shape_fixing.rs"

# [[bin]]
# name = "rwasm_post_trusted_setup"
# path = "scripts/post_trusted_setup.rs"

[features]
native-gnark = ["sp1-recursion-gnark-ffi/native"]
debug = ["rwasm-machine/debug"]

[lints]
workspace = true
